--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -70,6 +70,7 @@ deny 107.189.4.12;
 deny 107.189.4.209;
 deny 107.189.5.121;
 deny 107.189.5.188;
+deny 107.189.5.249;
 deny 107.189.5.7;
 deny 107.189.6.124;
 deny 107.189.7.141;
@@ -625,6 +626,7 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.237.221.228;
 deny 193.239.232.102;
@@ -675,7 +677,6 @@ deny 198.98.48.33;
 deny 198.98.48.35;
 deny 198.98.50.199;
 deny 198.98.51.189;
-deny 198.98.51.249;
 deny 198.98.57.151;
 deny 198.98.57.74;
 deny 198.98.61.60;
@@ -945,7 +946,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1045,7 +1045,6 @@ deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1362::2;
-deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1067,6 +1066,7 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
+deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1249,7 +1249,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1619,11 +1618,60 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::19eb:717b;
+deny 2a10:1fc0:10::28fc:90d4;
+deny 2a10:1fc0:10::2a17:5b54;
+deny 2a10:1fc0:10::2cf4:6ba2;
+deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3903:457;
+deny 2a10:1fc0:10::3919:de17;
+deny 2a10:1fc0:10::3a1:5e9f;
+deny 2a10:1fc0:10::3dc5:e694;
+deny 2a10:1fc0:10::3eb3:d1d0;
+deny 2a10:1fc0:10::3ec1:2b1e;
+deny 2a10:1fc0:10::40d8:83c;
+deny 2a10:1fc0:10::42d2:f78b;
+deny 2a10:1fc0:10::5138:4dfa;
+deny 2a10:1fc0:10::5719:261d;
+deny 2a10:1fc0:10::61d9:7617;
+deny 2a10:1fc0:10::61e2:c84d;
+deny 2a10:1fc0:10::627f:3c31;
+deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
+deny 2a10:1fc0:10::6c2e:469a;
+deny 2a10:1fc0:10::6d92:d6ab;
+deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::792f:38b4;
+deny 2a10:1fc0:10::895d:abf9;
+deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8b78:d42e;
+deny 2a10:1fc0:10::8d4d:eca2;
+deny 2a10:1fc0:10::9a73:d4f2;
+deny 2a10:1fc0:10::9d80:c9f7;
+deny 2a10:1fc0:10::9e08:e765;
+deny 2a10:1fc0:10::a3a5:49da;
+deny 2a10:1fc0:10::a458:8b37;
+deny 2a10:1fc0:10::a63c:724c;
+deny 2a10:1fc0:10::b571:1205;
+deny 2a10:1fc0:10::bf3f:d195;
+deny 2a10:1fc0:10::c129:61a1;
+deny 2a10:1fc0:10::c385:c7fa;
+deny 2a10:1fc0:10::c7c7:2f84;
+deny 2a10:1fc0:10::d5a6:a292;
+deny 2a10:1fc0:10::d5d0:db30;
+deny 2a10:1fc0:10::d6b7:b3e9;
+deny 2a10:1fc0:10::dbe0:6173;
+deny 2a10:1fc0:10::dbe9:7852;
+deny 2a10:1fc0:10::e4c8:9020;
+deny 2a10:1fc0:10::ea87:5496;
+deny 2a10:1fc0:10::fa6c:cac5;
+deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1845,6 +1893,7 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.249.49.183;
 deny 46.250.243.29;
 deny 46.30.188.218;
 deny 47.254.142.180;
@@ -1941,6 +1990,30 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
+deny 85.239.55.11;
+deny 85.239.55.110;
+deny 85.239.55.112;
+deny 85.239.55.114;
+deny 85.239.55.123;
+deny 85.239.55.132;
+deny 85.239.55.168;
+deny 85.239.55.173;
+deny 85.239.55.174;
+deny 85.239.55.184;
+deny 85.239.55.189;
+deny 85.239.55.192;
+deny 85.239.55.201;
+deny 85.239.55.228;
+deny 85.239.55.230;
+deny 85.239.55.239;
+deny 85.239.55.24;
+deny 85.239.55.249;
+deny 85.239.55.25;
+deny 85.239.55.250;
+deny 85.239.55.31;
+deny 85.239.55.37;
+deny 85.239.55.51;
+deny 85.239.55.80;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1984,6 +2057,30 @@ deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.219.237.39;
 deny 91.227.114.153;
+deny 91.227.77.107;
+deny 91.227.77.108;
+deny 91.227.77.119;
+deny 91.227.77.125;
+deny 91.227.77.139;
+deny 91.227.77.158;
+deny 91.227.77.160;
+deny 91.227.77.181;
+deny 91.227.77.193;
+deny 91.227.77.200;
+deny 91.227.77.208;
+deny 91.227.77.209;
+deny 91.227.77.226;
+deny 91.227.77.229;
+deny 91.227.77.237;
+deny 91.227.77.25;
+deny 91.227.77.31;
+deny 91.227.77.36;
+deny 91.227.77.44;
+deny 91.227.77.48;
+deny 91.227.77.51;
+deny 91.227.77.54;
+deny 91.227.77.62;
+deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
