--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -70,7 +70,6 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -946,6 +945,7 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
+set_real_ip_from 217.154.21.121;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -1001,7 +1001,6 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2407:1c00:6100:5640::;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
@@ -1066,7 +1065,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1249,6 +1247,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1272,7 +1271,6 @@ set_real_ip_from 2a03:4000:28:1e8::69;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
 set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
-set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 set_real_ip_from 2a03:4000:62:8:c855:23ff:fef6:50ee;
@@ -1771,7 +1769,6 @@ set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
-set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
@@ -2115,5 +2112,4 @@ set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
-set_real_ip_from 97.74.89.52;
 set_real_ip_from 98.128.173.33;
