--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -121,7 +121,6 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2407:1c00:6100:5640::;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
@@ -176,6 +175,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -342,7 +342,6 @@ set_real_ip_from 2a00:1dc0:caff:68::1;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:4d80::1;
-set_real_ip_from 2a00:6020:a581:400:1602:ecff:fe41:d0ad;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
@@ -354,10 +353,9 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2479:0:6e00::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -426,10 +424,6 @@ set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
-set_real_ip_from 2a06:1700:0:12::1;
-set_real_ip_from 2a06:1700:0:12::2;
-set_real_ip_from 2a06:1700:0:12::3;
-set_real_ip_from 2a06:1700:0:12::4;
 set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
@@ -694,6 +688,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
